--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -1,7 +1,18 @@
-@import "demo.css";
-@import "jquery.mobile.flatui.css";
+/**
+ * General import of all classes.
+ */
+
+/* Legacy and 3rd party css */
 @import "normalize.css";
 @import "pushy.css";
+
+/* Core stuff */
+@import "less/variables.less";
+@import "less/mixins.less";
+
+/* General layout and common elements */
+@import "less/layout.less";
+@import "less/common.less";
+
+/* Page and element specific */
 @import "less/buttons.less";
-
-
