--- a/www/css/less/common.less
+++ b/www/css/less/common.less
@@ -1,3 +1,15 @@
+.title-bar{
+	width: 100%;
+	background-color: black;
+	text-align: center;
+
+	font-size: 1.6em;
+	color: white;
+
+	padding-top: 0.4em;
+	padding-bottom: 0.4em;
+}
+
 ul{
 	margin: 0px;
 	padding: 0px;
