--- a/www/css/less/layout.less
+++ b/www/css/less/layout.less
@@ -10,12 +10,7 @@ html{
 		background-color: #7baf05;
 		background-image: url('../img/atea-bg.png');
 		.background-size(cover);
-	}
-
-	.ui-header{
-		background-color: transparent;
-		background-image: url('../img/atea-logo.png');
-		.background-size(contain);
+		text-shadow: none;
 	}
 }
 
@@ -39,7 +34,43 @@ html{
 	}
 }
 
+#header{
+
+	height: 6em;
+	line-height: 8.5em;
+	background-color: transparent;
+	border-style: none;
+
+
+	.logo{
+		width: 100%;
+		height: 50%;
+		display: inline-block;
+		background-image: url('../img/atea-logo.png');
+		background-size: contain;
+		background-position: center center;
+		background-repeat: no-repeat;
+
+	}
+}
+
 #footer{
 	background-color: rgba(255, 255, 255, 0.34);
 	border-top: 1px solid rgba(255, 255, 255, 0.43);
+	height: 3em;
+
+	a{
+		color: white;
+		text-decoration: none;
+		font-weight: normal;
+		top: 0.7em;
+	}
+
+	.ui-btn-left{
+		left: 1em;
+	}
+
+	.ui-btn-right{
+		right: 1em;
+	}
 }
