--- a/www/css/less/layout.less
+++ b/www/css/less/layout.less
@@ -2,6 +2,8 @@ html, body{
 	overflow-x: hidden; /* prevents horizontal scroll bars */
 	-webkit-tap-highlight-color: rgba(0,0,0,0); /* disable webkit tap highlight */
 	height: 100%; /* fixes focus scrolling in Safari (OS X) */
+
+	font-family: @font-family-base;
 }
 
 html{
@@ -52,6 +54,11 @@ html{
 		background-repeat: no-repeat;
 
 	}
+}
+
+#content{
+	padding-left: @content-padding;
+	padding-right: @content-padding;
 }
 
 #footer{
