--- a/www/css/less/variables.less
+++ b/www/css/less/variables.less
@@ -2,7 +2,7 @@
 // Grid system
 // --------------------------------------------------
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Trebuchet MS", Helvetica, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
@@ -31,3 +31,17 @@
 @zindex-navbar-fixed:      1030;
 @zindex-modal-background:  1040;
 @zindex-modal:             1050;
+
+
+// Colors
+// -------------------------
+@green-10: #81dd4f;
+@green-20: #6fbf40;
+@green-30: #62aa3a;
+@green-40: #4f8c2e;
+@green-50: #39661f;
+
+
+// Paddings
+// -------------------------
+@content-padding: 1em;
