* Code refactored + More styles + Homescreen added.

--- a/www/css/less/specific.less
+++ b/www/css/less/specific.less
@@ -14,3 +14,20 @@
 
 	}
 }
+
+#home-btns{
+	.ui-btn-lg{
+		font-size: 1.5em;
+		line-height: 2em;
+
+		&.ui-btn-icon-lg.ui-btn-icon-top{
+			padding-top: 2.25em;
+		}
+	}
+
+	.map-btn{
+		font-size: 2.2em;
+		line-height: 2.2em;
+		text-align: left;
+	}
+}
