--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -14,5 +14,5 @@
 @import "less/layout.less";
 @import "less/common.less";
 
-/* Page and element specific */
-@import "less/buttons.less";
+/* Page specific */
+@import "less/specific.less";
