--- a/www/css/less/common.less
+++ b/www/css/less/common.less
@@ -20,38 +20,93 @@ button, input, select, textarea{
 	font-family: @font-family-base;
 }
 
+// Icons
+// --------------------------------
+.ui-btn-icon-lg{
+
+	&.ui-btn-icon-top,
+	&.ui-btn-icon-bottom{
+		&:after{
+			height: 40px;
+			width: 40px;
+			margin-left: -20px;
+		}
+	}
+
+	&.ui-btn-icon-left,
+	&.ui-btn-icon-right,
+	&.ui-btn-icon-notext{
+		&:after{
+			height: 40px;
+			width: 40px;
+			margin-top: -20px;
+		}
+	}
+}
+
+.ui-btn-icon-left,
+.ui-btn-icon-right,
+.ui-btn-icon-top,
+.ui-btn-icon-bottom,
+.ui-btn-icon-notext{
+	&:after{
+		background-size: cover;
+		.border-radius(0px);
+		background-color: transparent;
+	}
+}
+
 // Buttons and form elements
 // --------------------------------
-#content{
-	.ui-btn-big{
+.ui-btn{
+	&.ui-btn-lg{
 		border-style: none;
 		color: #FFFFFF;
 		font-size: 2.5em;
 		line-height: 2.5em;
 		font-weight: normal;
 		margin-top: 0;
+		margin-bottom: 0;
 		padding-bottom: 0em;
 		padding-top: 0.1em;
 		text-shadow: none;
 		text-transform: uppercase;
 		.box-shadow(none);
-
 		.bg-green-40();
 
 		&:hover,
+		&:visited,
 		&:focus{
-			.bg-green-40();
+			text-shadow: none;
+			background-color: inherit;
 			color: white;
 		}
 	}
 
-	.ui-input-text,
-	.ui-input-search{
-		margin: 0.9em 0;
+	&.bg-green-10{
+		.bg-green-10() !important;
+	}
+	&.bg-green-20{
+		.bg-green-20() !important;
+	}
+	&.bg-green-30{
+		.bg-green-30() !important;
+	}
+	&.bg-green-40{
+		.bg-green-50() !important;
+	}
+	&.bg-green-50{
+		.bg-green-50() !important;
+	}
+}
 
-		input{
-			min-height: 2.6em;
-		}
+
+.ui-input-text,
+.ui-input-search{
+	margin: 0.9em 0;
+
+	input{
+		min-height: 2.6em;
 	}
 }
 
