Add Activity list

--- a/www/css/less/common.less
+++ b/www/css/less/common.less
@@ -7,6 +7,7 @@
 
 	padding-top: 0.4em;
 	padding-bottom: 0.4em;
+    cursor: pointer;
 
 	.minus-side-margin();
 }
@@ -149,4 +150,15 @@ button, input, select, textarea{
 }
 .bg-green-50{
 	background-color: @green-50;
+}
+
+#list .ls-gray{
+    display: block;
+    color: black;
+    padding: 15px 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    text-decoration: none;
+    background-collor: @gray-10;
+    opacity: 0.9;
 }
