--- a/www/css/less/layout.less
+++ b/www/css/less/layout.less
@@ -8,7 +8,7 @@ html, body{
 
 html{
 
-	.ui-page-theme-a{
+	.push-page{
 		background-color: #7baf05;
 		background-image: url('../img/atea-bg.png');
 		.background-size(cover);
@@ -56,7 +56,7 @@ html{
 	}
 }
 
-#content{
+.content{
 	padding-left: @content-padding;
 	padding-right: @content-padding;
 }
