--- a/www/css/less/specific.less
+++ b/www/css/less/specific.less
@@ -31,3 +31,24 @@
 		text-align: left;
 	}
 }
+
+.partner-body{
+  background-color: @gray-10;
+  font-size: 1.6em;
+  color: black;
+  padding-top: 0.4em;
+  padding-bottom: 0.4em;
+
+  .minus-side-margin();
+}
+
+.partner-img{
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  display: inline-block;
+}
+
+.partner-body p{
+  font-size: 1.0em;
+}
