--- a/www/css/less/specific.less
+++ b/www/css/less/specific.less
@@ -3,15 +3,29 @@
 	}
 }
 
-#previous-events{
-	.ui-collapsible-heading{
-
+#event-list{
+	.panel-heading{
+		text-align: center;
 	}
-}
 
-#upcoming-events{
-	.ui-collapsible-heading{
+	#events-previous{
+		.panel-heading{
+			.bg-grey();
+		}
+	}
 
+	#events-upcoming{
+		.panel-heading{
+			.bg-black();
+		}
+	}
+
+	.event-date{
+		color: dimgray;
+	}
+
+	.event-time{
+		color: rgb(172, 172, 172);
 	}
 }
 
