--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -3,8 +3,8 @@
  */
 
 /* Legacy and 3rd party css */
-@import "normalize.css";
-@import "pushy.css";
+@import "bootstrap.min.css";
+@import "slider.css";
 
 /* Core stuff */
 @import "less/variables.less";
@@ -16,4 +16,3 @@
 
 /* Page specific */
 @import "less/specific.less";
-@import "less/slider.less";
