--- a/www/css/less/common.less
+++ b/www/css/less/common.less
@@ -1,3 +1,4 @@
+// Black title bar
 .title-bar{
 	background-color: black;
 	text-align: center;
@@ -19,101 +20,6 @@ ul{
 
 button, input, select, textarea{
 	font-family: @font-family-base;
-}
-
-// Icons
-// --------------------------------
-.ui-btn-icon-lg{
-
-	&.ui-btn-icon-top,
-	&.ui-btn-icon-bottom{
-		&:after{
-			height: 40px;
-			width: 40px;
-			margin-left: -20px;
-		}
-	}
-
-	&.ui-btn-icon-left,
-	&.ui-btn-icon-right,
-	&.ui-btn-icon-notext{
-		&:after{
-			height: 40px;
-			width: 40px;
-			margin-top: -20px;
-		}
-	}
-}
-
-.ui-btn-icon-left,
-.ui-btn-icon-right,
-.ui-btn-icon-top,
-.ui-btn-icon-bottom,
-.ui-btn-icon-notext{
-	&:after{
-		background-size: cover;
-		.border-radius(0px);
-		background-color: transparent;
-	}
-}
-
-// Buttons and form elements
-// --------------------------------
-.ui-btn{
-	&.ui-btn-lg{
-		border-style: none;
-		color: #FFFFFF;
-		font-size: 2.5em;
-		line-height: 2.5em;
-		font-weight: normal;
-		margin-top: 0;
-		margin-bottom: 0;
-		padding-bottom: 0em;
-		padding-top: 0.1em;
-		text-shadow: none;
-		text-transform: uppercase;
-		.box-shadow(none);
-		.bg-green-40();
-    }
-
-	&.bg-green-10{
-		.bg-green-10() !important;
-	}
-	&.bg-green-20{
-		.bg-green-20() !important;
-	}
-	&.bg-green-30{
-		.bg-green-30() !important;
-	}
-	&.bg-green-40{
-		.bg-green-40() !important;
-	}
-	&.bg-green-50{
-		.bg-green-50() !important;
-	}
-}
-
-.panel-group {
-
-	.panel{
-		.border-radius(0px);
-	}
-
-	.panel+.panel{
-		margin-top: 0px;
-	}
-}
-
-.panel{
-	.border-radius(0px);
-	border-width: 0px;
-
-	.panel-heading{
-		.border-radius(0px);
-		border-width: 0px;
-
-		text-decoration: none;
-	}
 }
 
 // General classes
@@ -164,56 +70,4 @@ button, input, select, textarea{
 .bg-black{
 	background-color: black;
 	color: white;
-}
-
-.panel-list{
-	padding: 0px;
-
-	ul{
-		padding: 0px;
-		margin: 0px;
-		list-style-type: none;
-
-		li{
-			border-bottom: 1px solid #DDDEDF;
-			padding: 4px 45px 0px 7px;
-
-			h4{
-				font-size: 100%;
-				line-height: normal;
-				font-weight: bold;
-				margin: 0px;
-			}
-
-			a{
-				color: black;
-			}
-
-			p{
-				margin: 0px;
-			}
-		}
-	}
-}
-
-#list .ls-gray{
-    display: block;
-    color: black;
-    padding: 15px 30px;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    border-top: 1px solid rgba(255, 255, 255, .1);
-    text-decoration: none;
-    background-collor: @gray-10;
-    opacity: 0.9;
-}
-
-.ui-btn {
-  font-size: 16px;
-  display: block;
-  position: relative;
-  text-align: center;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  cursor: pointer;
 }
