--- a/www/css/styles.less
+++ b/www/css/styles.less
@@ -13,6 +13,7 @@
 /* General layout and common elements */
 @import "less/layout.less";
 @import "less/common.less";
+@import "less/elements.less";
 
 /* Page specific */
 @import "less/specific.less";
