+ Homepage styles + Correct return back behaviour.

--- a/www/css/less/specific.less
+++ b/www/css/less/specific.less
@@ -31,19 +31,35 @@
 }
 
 #home-btns{
-	.ui-btn-lg{
+	.ui-btn{
 		font-size: 1.5em;
 		line-height: 2em;
+		text-transform: uppercase;
+		text-align: center;
 
-		&.ui-btn-icon-lg.ui-btn-icon-top{
-			padding-top: 2.25em;
+		.glyphicon{
+			font-size: 2em;
+			display: block;
+			margin-top: 0.4em;
 		}
 	}
 
 	.map-btn{
-		font-size: 2.2em;
-		line-height: 2.2em;
+		font-size: 3em;
+		line-height: 2em;
 		text-align: left;
+
+		.text{
+			margin-left: 0.8em;
+		}
+
+		.glyphicon{
+			display: inline-block;
+			float: right;
+			font-size: 1.1em;
+			margin-bottom: 0.4em;
+			margin-right: 0.3em;
+		}
 	}
 }
 
