--- a/www/template/profile.html
+++ b/www/template/profile.html
@@ -9,22 +9,20 @@
         <h3>~ user.first_name ~</h3>
         <h3 style="margin-top: 10px;">~ user.last_name ~</h3>
         <h4>~ user.company_name ~</h4>
+        <br>
         <div ng-if="event.tokensActive">
-            <img style="width: 10em; float: left;" src="img/coins.jpg">
-            <span style="float: left; margin-left: 2em; margin-top: 6em;">
-                <h2>~dyna.tokens_val~</h2>
-            </span>
+            <img style="width: 6.9em; " src="img/coins.jpg">
+            <h4>~dyna.tokens_val~</h4>
         </div>
+        <br>
+        <qr type-number="8" correction-level="'X'" size="150" input-mode="0" text="user.barcode"></qr>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
-<br>
-<br>
-<qr type-number="8" correction-level="'X'" size="150" input-mode="0" text="user.barcode"></qr>
-<br>
-<br>
-<loader></loader>
 </div>
-
+<loader></loader>
 <br>
 <br>
 <br>
