--- a/platforms/android/assets/www/css/less/angular-animation.less
+++ b/platforms/android/assets/www/css/less/angular-animation.less
@@ -408,7 +408,6 @@ connection {
 
 .showww {
 	.transition(1s linear);
-	// opacity: 1;
 	&.ng-enter {
 		opacity: 0;
 	}
@@ -421,4 +420,51 @@ qr {
 	position: relative;
 	left: 50%;
 	margin-left: -130px;
+}
+
+.message {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	display: table;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 100;
+	.transition(0.15s ease-in-out);
+	> div {
+		display: table-cell;
+		vertical-align: middle;
+		> div {
+			cursor: pointer;
+			width: 90%;
+			padding: 3em;
+			background-color: white;
+			margin-left: auto;
+			margin-right: auto;
+			text-align: center;
+			.border-radius(10px);
+		}
+	}
+	&.ng-hide-remove {
+		display: table !important;
+		opacity: 0;
+	}
+
+	&.ng-hide-remove-active {
+		display: table !important;
+		opacity: 1;
+	}
+
+	&.ng-hide-add {
+		display: table !important;
+		opacity: 1;
+	}
+
+	&.ng-hide-add-active {
+		display: table !important;
+		opacity: 0;
+	}
 }
