--- a/www/template/schedules.html
+++ b/www/template/schedules.html
@@ -16,8 +16,8 @@
 								   class="container-fluid">
 									<h4 class="row event-name">~ schedule.name ~</h4>
 									<p class="row event-time">
-										~ schedule.moreinfo ~
-										<span style="visibility: ~ schedule.moreinfo ? '' : 'hidden' ~;" class="glyphicon glyphicon-map-marker"></span>
+										~ schedule.desc ~
+										<span style="visibility: ~ schedule.desc ? '' : 'hidden' ~;" class="glyphicon glyphicon-map-marker"></span>
 									</p>
 								</a>
 							</li>
