--- a/www/template/schedule.html
+++ b/www/template/schedule.html
@@ -7,14 +7,14 @@
     <div class="partner-body">
     	<div class="partner-wrap">
         	<h3>~ schedule.name ~</h3>
-        	<h5 ng-if="schedule.desc"
+        	<h5 ng-if="schedule.location"
                 class="event-time">
-                <span>~schedule.desc~</span>
+                <span>~schedule.location~</span>
                 <span class="glyphicon glyphicon-map-marker"></span>
             </h5>
         	<img ng-if="schedule.image_url"
                  ng-src="~ baseURL.BASE + schedule.image_url ~" style="margin-top: 1em; margin-bottom: 1em; max-width: 100%;" align="middle" class="partner-img"/>
-            <p ng-bind-html="renderHtml(schedule.moreinfo)"></p>
+            <p ng-bind-html="renderHtml(schedule.desc)"></p>
     	</div>
     	<a ng-if="schedule.survey_id !== '0' && schedule.is_visible"
            ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + schedule.survey_id)"
