--- a/platforms/android/assets/www/template/comment.html
+++ b/platforms/android/assets/www/template/comment.html
@@ -4,7 +4,7 @@
       ng-submit="submit()">
     <div class="question-body">
         <div class="row visitor">
-            <h2>~ member.first_name ~ ~ member.last_name ~</h2>
+            <h2 style="fomt-size: 200%;">~ member.first_name ~ ~ member.last_name ~</h2>
         </div>
         
         <div class="row questions">
@@ -28,24 +28,24 @@
         <li class="list-group-item question">
         <div>
             <div class="row">
-                <h4>~local.perselved_interest~</h4>
-                <div style="position: relative;">
+                <h3 style="fomt-size: 160%;">~local.perselved_interest~</h3>
+                <div style="position: relative; width: 96%; margin: 0 auto;">
                     <input type="range" min="0" max="10" step="1"
                            ng-model="interest">
                     </input>
-                    <div style="display: table; position: absolute; right: -1.6em; top: 0; height: 4em;">
-                        <span style="display: table-cell; vertical-align: middle; height:100%;">~ interest ~</span>
+                    <div style="position: absolute; right: -1.6em; top: -10px; font-size: 1.3em;">
+                      ~ interest ~
                     </div>
                 </div>
             </div>
             <div class="row">
-                <h4>~local.perselved_revenue~</h4>
-                <div style="position: relative;">
+                <h3 style="fomt-size: 160%;">~local.perselved_revenue~</h3>
+                <div style="position: relative; width: 96%; margin: 0 auto;">
                     <input type="range" min="0" max="10" step="1"
                            ng-model="revenue">
                     </input>
-                    <div style="display: table; position: absolute; right: -1.6em; top: 0; height: 4em;">
-                        <span style="display: table-cell; vertical-align: middle; height:100%;">~ revenue ~</span>
+                    <div style="position: absolute; right: -1.6em; top: -10px; font-size: 1.3em;">
+                        ~ revenue ~
                     </div>
                 </div>
             </div>
