--- a/platforms/android/assets/www/template/rate.html
+++ b/platforms/android/assets/www/template/rate.html
@@ -1,7 +1,7 @@
 <loader></loader>
 <div ng-show="fields"
 		 class="surveys">
-	<form name="surveyForm"
+	<form novalidate name="surveyForm"
 			ng-submit="submitSurveyQuestions()">
 		<ul class="question-body" style="padding-top: 1.9em; padding-bottom: 3em;"></ul>
 		<div class="clear"></div>
