--- a/platforms/ios/www/template/rate.html
+++ b/platforms/ios/www/template/rate.html
@@ -3,7 +3,11 @@
 		 class="surveys">
 	<form novalidate name="surveyForm"
 			ng-submit="submitSurveyQuestions()">
-		<ul class="question-body" style="padding-top: 1.9em; padding-bottom: 3em;"></ul>
+		<div class="question-body" style="padding-top: 1.9em; padding-bottom: 3em;">
+			<h1>~ survey.name ~</h1>
+			<br>
+			<ul></ul>
+		</div>
 		<div class="clear"></div>
 		<button class="ui-btn ui-btn-lg ng-scope" style="font-size: 3em;">~local.rate~</button>
 	</form>
