--- a/platforms/ios/www/template/rates.html
+++ b/platforms/ios/www/template/rates.html
@@ -10,7 +10,7 @@
     <ul>
       <li ng-repeat="survey in surveys | filter:surveyName">
           <a ng-if="survey.is_viewed === '0'"
-             ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id)"
+             ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id, 'survey', survey)"
              class="container-fluid">
               <h4 class="row">
                 ~ survey.name ~
