--- a/www/css/less/angular-animation.less
+++ b/www/css/less/angular-animation.less
@@ -194,7 +194,7 @@
 
 input {
 	&.ng-invalid {
-		border-color: yellow;
+		border-color: #a94442;
 	}
 	&.ng-invalid-after {
 		border-color: #E0115F;
