--- a/www/template/rates.html
+++ b/www/template/rates.html
@@ -16,7 +16,7 @@
                 ~ survey.name ~
               </h4>
           </a>
-          <a ng-if="survey.is_viewed !== '0'"
+          <a ng-if="survey.is_viewed === '1'"
              class="container-fluid rated">
               <h4 class="row">
                 ~ survey.name ~
