--- a/platforms/android/assets/www/css/less/elements.less
+++ b/platforms/android/assets/www/css/less/elements.less
@@ -181,21 +181,23 @@
 }
 
 select.ng-pristine {
-	border-color: yellow;
-	.box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
+	border-color: #a94442;
+	border-width: 2px;
+	// .box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
 	&.no-valid {
 		border-color: #a94442;
-		.box-shadow(0 0 3px #a94442, 0 0 9px #a94442 inset);
+		border-width: 2px;
+		// .box-shadow(0 0 3px #a94442, 0 0 9px #a94442 inset);
 	}
 }
 
 textarea.ng-invalid {
-	border-color: yellow;
-	.box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
+	border-color: #a94442;
+	// .box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
 }
 textarea.no-valid {
-	border-color: yellow;
-	.box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
+	border-color: #a94442;
+	// .box-shadow(0 0 3px yellow, 0 0 9px yellow inset);
 }
 
 /**
@@ -505,4 +507,10 @@ input:focus {
 			display: none;
 		}
 	}
+}
+
+.survey-checkbox {
+	float: left;
+	margin-right: 1.6em;
+	height: 30px;
 }
