--- a/platforms/android/assets/www/css/less/layout.less
+++ b/platforms/android/assets/www/css/less/layout.less
@@ -31,7 +31,7 @@ body {
 	-ms-touch-action: pan-y;
 	touch-action: pan-y;
 	-ms-content-zooming: none;
-	background: url(../img/atea-bg.png) fixed;
+	background: url(../img/atea-bg.png) fixed 10% 10%;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
