--- a/platforms/android/assets/www/template/rates.html
+++ b/platforms/android/assets/www/template/rates.html
@@ -10,13 +10,13 @@
     <ul>
       <li ng-repeat="survey in surveys | filter:surveyName">
           <a ng-if="survey.is_viewed === '0'"
-             ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id)"
+             ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id, 'survey', survey)"
              class="container-fluid">
               <h4 class="row">
                 ~ survey.name ~
               </h4>
           </a>
-          <a ng-if="survey.is_viewed !== '0'"
+          <a ng-if="survey.is_viewed === '1'"
              class="container-fluid rated">
               <h4 class="row">
                 ~ survey.name ~
