--- a/platforms/ios/www/template/profile.html
+++ b/platforms/ios/www/template/profile.html
@@ -2,13 +2,12 @@
 <div class="row">
     <div class="col-xs-6">
         <br>
-    	<img ng-show="user.avatar"
-             ng-src="http://188.226.184.59/congressomulti/~user.avatar~" align="middle" width="100%" class="profile-img">
+    	<img ng-src="~ participient.avatar ? 'http://188.226.184.59/congressomulti/api' + participient.avatar : 'img/contacts-xxl.png' ~" align="middle" width="100%" class="profile-img">
     </div>
     <div class="col-xs-6 relative">
-        <h3>~ user.first_name ~</h3>
-        <h3 style="margin-top: 10px;">~ user.last_name ~</h3>
-        <h4>~ user.company_name ~</h4>
+        <h3>~ participient.first_name ~</h3>
+        <h3 style="margin-top: 10px;">~ participient.last_name ~</h3>
+        <h4>~ participient.company_name ~</h4>
         <br>
         <div ng-if="event.tokensActive">
             <img style="width: 6.9em; " src="img/coins.jpg">
