--- a/www/css/less/specific.css
+++ b/www/css/less/specific.css
@@ -168,7 +168,7 @@ textarea {
   padding-left: 15px;
   margin-top: -1px;
   font-weight: 500;
-  color: #333333;
+  color: lightgray;
   background-color: gray;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
