--- a/www/css/less/specific.less
+++ b/www/css/less/specific.less
@@ -150,7 +150,7 @@
   padding-left: 15px;
   margin-top: -1px;
   font-weight: 500;
-  color: #333333;
+  color: lightgray;
   background-color: gray;
   // border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
