--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -975,7 +975,7 @@ span.icon {
   padding-left: 15px;
   margin-top: -1px;
   font-weight: 500;
-  color: #333333;
+  color: lightgray;
   background-color: gray;
   border-bottom: 1px solid #ddd;
 }
