--- a/platforms/ios/www/template/schedules.html
+++ b/platforms/ios/www/template/schedules.html
@@ -17,7 +17,9 @@
 									<h4 class="row event-name">~ schedule.name ~</h4>
 									<p class="row event-time">
 										~ schedule.location ~
-										<span style="visibility: ~ schedule.location ? '' : 'hidden' ~;" class="glyphicon glyphicon-map-marker"></span>
+										<img style="visibility: ~ schedule.location ? '' : 'hidden' ~;"
+												 height="16px"
+												 src="img/raphael_location_simple-black_1.png"/>
 									</p>
 								</a>
 							</li>
