--- a/www/css/less/elements.less
+++ b/www/css/less/elements.less
@@ -506,6 +506,12 @@ input:focus {
 	background: url(../img/twitter-icon.png);
 }
 
+// .location-icon {
+// 	height: 20px;
+// 	width: 25px;
+// 	background: url(../img/raphael_location_simple-black_128x128.png);
+// }
+
 .profile-img {
 	margin-bottom: 15px;
 }
