--- a/platforms/wp8/www/css/less/common.less
+++ b/platforms/wp8/www/css/less/common.less
@@ -29,6 +29,14 @@ button, input, select, textarea{
 	font-size: 1.9em;
 }
 
+.visibles {
+	opacity: 1;
+}
+
+.hiddens {
+	opacity: 0;
+}
+
 // General classes
 // -------------------------------
 
