--- a/platforms/wp8/www/template/rates.html
+++ b/platforms/wp8/www/template/rates.html
@@ -5,20 +5,19 @@
              ng-model="surveyName"
              placeholder="~local.survey_placeholder~">
   </div>
-  
   <div class="panel panel-body survey-list" style="margin-top: -15px;">
     <ul>
       <li ng-repeat="survey in surveys | filter:surveyName">
-          <a ng-if="survey.is_viewed === '0'"
+          <a ng-if="survey.is_answered == '0' && survey.canBeAnswered"
              ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id, 'survey', survey)"
              class="container-fluid">
-              <h4 class="row">
+              <h4 class="row" style="padding-right: 10%;">
                 ~ survey.name ~
               </h4>
           </a>
-          <a ng-if="survey.is_viewed === '1'"
+          <a ng-if="survey.is_answered == '1' || !survey.canBeAnswered"
              class="container-fluid rated">
-              <h4 class="row">
+              <h4 class="row" style="padding-right: 10%;">
                 ~ survey.name ~
               </h4>
           </a>
