--- a/platforms/wp8/www/template/schedule.html
+++ b/platforms/wp8/www/template/schedule.html
@@ -10,13 +10,15 @@
         	<h5 ng-if="schedule.location"
                 class="event-time">
                 <span>~schedule.location~</span>
-                <span class="glyphicon glyphicon-map-marker"></span>
+                <img style="visibility: ~ schedule.location ? '' : 'hidden' ~;"
+                     height="16px"
+                     src="img/raphael_location_simple-black_1.png"/>
             </h5>
         	<img ng-if="schedule.image_url"
                  ng-src="~ baseURL.BASE + schedule.image_url ~" style="margin-top: 1em; margin-bottom: 1em; max-width: 100%;" align="middle" class="partner-img"/>
             <p ng-bind-html="renderHtml(schedule.desc)"></p>
     	</div>
-    	<a ng-if="participient && schedule.survey_id !== '0' && survey.is_answered === '0'"
+    	<a ng-if="participient &&  schedule.survey_id !== '0' && survey.is_answered == '0' && survey.canBeAnswered"
            ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + schedule.survey_id)"
            class="ui-btn ui-btn-lg">~local.rate_session~</a>
     </div>
